syntax = "proto3";

package yuca.profiler;

import "profiler/proto/yuca/profiler/linux/linux.proto";

option java_multiple_files = true;
option java_package = "yuca.profiler";
option java_outer_classname = "ProfilerProtos";

message Timestamp {
  optional uint64 secs = 1;
  optional uint64 nanos = 2;
}

message Duration {
  optional uint64 secs = 1;
  optional uint64 nanos = 2;
}

message YucaProfilingSession {
  Duration period = 1;
}

message YucaProfile {
  message CpusFrequencies {
    optional Timestamp timestamp = 1;
    repeated linux.CpuFrequency frequency = 2;
  }

  message ThermalZonesTemperatures {
    optional Timestamp timestamp = 1;
    repeated linux.ThermalZoneTemperature temperature = 2;
  }

  message SocketsPowers {
    optional Timestamp timestamp = 1;
    repeated linux.SocketPower power = 2;
  }

  message SocketsEmissionsRates {
    optional Timestamp timestamp = 1;
    repeated linux.SocketEmissionsRate emissions = 2;
  }

  message TasksActivities {
    optional Timestamp timestamp = 1;
    repeated linux.TaskActivityRate activity = 2;
  }

  message TasksPowers {
    optional Timestamp timestamp = 1;
    repeated linux.TaskPower power = 2;
  }

  message TasksEmissionsRates {
    optional Timestamp timestamp = 1;
    repeated linux.TaskEmissionsRate emissions = 2;
  }

  YucaProfilingSession session = 1;

  repeated CpusFrequencies cpu_freq = 2;

  repeated SocketsPowers socket_power = 3;

  repeated SocketsEmissionsRates socket_emissions = 4;
  
  repeated TasksActivities task_activity = 5;
  
  repeated TasksPowers task_power = 6;

  repeated TasksEmissionsRates task_emissions = 7;
}
